[package]
name = "verum_protocol_types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
verum_common = { workspace = true }
# DEPRECATED: Superseded by stdlib/ and verum_common types
verum_ast = { workspace = true }
serde = { workspace = true }
