[package]
name = "verum_smt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# CVC5 backend API - enables CVC5 types and SmtBackendSwitcher.
# When enabled without cvc5-ffi, Cvc5Backend::new() returns NotAvailable error.
cvc5 = []
# CVC5 FFI bindings - link against real libcvc5.so/dylib (requires CVC5 installed)
# To use: Install CVC5 from https://cvc5.github.io/downloads.html
# Then: cargo build --features cvc5,cvc5-ffi
cvc5-ffi = ["cvc5"]
# Enable distributed cache with S3-compatible storage backend
# Requires: AWS credentials via environment or config
distributed-cache = ["tokio", "reqwest", "hmac", "base64"]
# Enable Redis cache backend for low-latency distributed caching
# Requires: Redis server accessible at configured URL
redis-cache = ["redis", "tokio"]

[dependencies]
verum_ast = { workspace = true }
verum_common = { workspace = true }
verum_error = { workspace = true }
# verum_types = { workspace = true }  # DISABLED: Circular dependency (verum_types -> verum_diagnostics -> verum_smt)
verum_protocol_types = { workspace = true }
z3 = { workspace = true }
z3-sys = "0.10.2"
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
num_cpus = "1.17.0"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
rayon = { workspace = true }
crossbeam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = "0.4"
sha2 = "0.11"
ed25519-dalek = "2.2.0"
rand = "0.9.2"
getrandom = "0.3"
lazy_static = "1.5"
hex = "0.4"
tokio = { workspace = true, optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
hmac = { version = "0.12", optional = true }
base64 = { version = "0.22", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
lazy_static = "1.5"
ctor = "0.6.1"
tokio = { workspace = true, features = ["macros", "rt"] }

[[bench]]
name = "tactic_selection_bench"
harness = false

