[package]
name = "verum_smt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
[lints]
workspace = true


[features]
# Default: CVC5 API enabled (stub mode — no actual library linking required).
# This activates the full complementary Z3+CVC5 architecture including the
# capability router, portfolio executor, cross-validation, and verify-strategy
# attribute plumbing. When CVC5 is not statically linked (cvc5-sys stub mode),
# the router transparently routes all goals to Z3.
default = ["cvc5"]
# CVC5 backend API - enables CVC5 types, SmtBackendSwitcher, and routing.
cvc5 = []
# CVC5 FFI bindings - link against real libcvc5 via cvc5-sys feature flags.
# To enable static linking: cargo build --features cvc5,cvc5-ffi
# (cvc5-ffi must be paired with cvc5-sys/vendored or cvc5-sys/system)
cvc5-ffi = ["cvc5"]
# Enable distributed cache with S3-compatible storage backend
# Requires: AWS credentials via environment or config
distributed-cache = ["tokio", "reqwest", "hmac", "base64"]
# Enable Redis cache backend for low-latency distributed caching
# Requires: Redis server accessible at configured URL
redis-cache = ["redis", "tokio"]

[dependencies]
verum_ast = { workspace = true }
verum_common = { workspace = true }
verum_error = { workspace = true }
# Edge flipped 2026-04-24: verum_types → verum_smt dropped; verum_smt now
# depends on verum_types. Concrete SMT bridges (refinement_backend /
# dependent_backend / exhaustiveness_backend) live here and implement the
# traits exposed by verum_types.
verum_types = { workspace = true }
verum_protocol_types = { workspace = true }
z3 = { workspace = true }
z3-sys = { workspace = true }
cvc5-sys = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
blake3 = { workspace = true }
num_cpus = "1.17.0"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
rayon = { workspace = true }
crossbeam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = "0.4"
sha2 = "0.10"
ed25519-dalek = "2.2.0"
rand = { workspace = true }
getrandom = "0.3"
lazy_static = "1.5"
hex = "0.4"
tokio = { workspace = true, optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
hmac = { version = "0.12", optional = true }
base64 = { version = "0.22", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
lazy_static = "1.5"
ctor = "0.6.1"
tokio = { workspace = true, features = ["macros", "rt"] }

[[bench]]
name = "tactic_selection_bench"
harness = false

