[package]
name = "verum_toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Verum toolchain management - runtime libraries, stdlib, and cross-compilation support"

[dependencies]
# Core utilities
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Hashing
sha2.workspace = true
hex.workspace = true

# File system
dirs.workspace = true
tempfile.workspace = true
walkdir.workspace = true

# Concurrency
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
