[package]
name = "verum_types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
[lints]
workspace = true


[features]
default = []
# Enable verbose debug output for type inference and protocol resolution
debug-output = []

[dependencies]
verum_ast = { workspace = true }
verum_common = { workspace = true }
verum_diagnostics = { workspace = true }
verum_error = { workspace = true }
verum_protocol_types = { workspace = true }
# verum_smt removed 2026-04-24 — edge flipped to break circular dependency.
# Concrete SMT-backed implementations now live in verum_smt and plug into
# verum_types via the traits in `refinement::SmtBackend`,
# `dependent_integration::DependentTypeChecker`, and
# `exhaustiveness::GuardVerifier`.
verum_modules = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
z3 = { workspace = true }
# NEVER add stacker here — user explicitly prohibits stack-growing libraries

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
verum_parser = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
# dev-only: test the SMT bridges that moved to verum_smt. This is safe
# because dev-dependencies are only linked for the test/bench binaries
# and do not re-introduce the production circular dependency.
verum_smt = { workspace = true }

[[bench]]
name = "production_targets"
harness = false

